# RustServerController

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  icon.rc  icon.res
.github/: build.yml
.github/workflows/: build_MacOS  build_MacOS.yml  build_MacOS_testing.yml  build_linux.yml  build_linux_testing.yml  build_win.yml  build_win_testing.yml  rust.yml
src/: AppState.rs  ControlledProgram.rs  ansi_to_html.rs  app_state.rs  configuration.rs  controlled_program.rs  defaultconfig.json  files.rs  logging.rs  macros.rs  main.rs  master.rs  messages.rs  servers.rs  slave.rs  theme.rs  webserver.rs  websocket.rs
src/html_src/: index.html  index.js  style.css
src/specializations/: minecraft.rs  mod.rs  terraria.rs  vintage_story.rs
