[package]
name = "server_host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_escapers = "0.2.0"
async-std = { version = "1.12.0", features = ["tokio03", "tokio02", "tokio1"] }
axum = { version = "0.6.20", features = ["tracing", "ws", "macros", "headers"] }
axum-extra = "0.7.7"
cargo-watch = "8.4.0"
crossterm = "0.27.0"
futures = "0.3.28"
futures-util = "0.3.28"
regex = "1.10.2"
serde = { version = "1.0.183", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.105", features = ["float_roundtrip"] }
tokio = { version = "1.31.0", features = ["full", "tracing"] }
tokio-tungstenite = "0.20.0"
tower = { version = "0.4.13", features = ["full", "tokio"] }
tower-http = { version = "0.4.3", features = ["full", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
