[package]
name = "rust_server_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_escapers = "0.2.0"
async-std = { version = "1.12.0", features = ["tokio03", "tokio02", "tokio1"] }
axum = { version = "0.8.4", features = ["tracing", "ws", "macros"] }
axum-extra = "0.10.1"
colorlab = {git = "https://github.com/SturdyFool10/ColorLab.git"}
crossterm = "0.29.0"
futures = "0.3.28"
futures-util = "0.3.28"
regex = "1.10.2"
serde = { version = "1.0.183", features = ["derive", "serde_derive"] }

serde_json = { version = "1.0.105", features = ["float_roundtrip"] }

rmp-serde = "1.1.2"
rmpv = "1.0.0"
tokio = { version = "1.31.0", features = ["full", "tracing"] }

tokio-tungstenite = "0.27.0"

tower = { version = "0.5.2", features = ["full", "tokio"] }

tower-http = { version = "0.6.6", features = ["full", "trace"] }

tracing = "0.1.37"

tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

dashmap = "6.1.0"
uuid = { version = "1.7.0", features = ["v4"] }

hyper = "1.7.0"

chrono = { version = "0.4.42", features = ["serde"] }

once_cell = "1.21.3"

colored = "3.0.0"


[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1"
